# ud

./: DEPLOYMENT_CHECKLIST.md  docker-compose.yml  railway.toml  test_phase_1_2.py  test_phase_1_3.py  test_phase_1_4.py  test_phase_1_5.py  test_phase_1_6.py  test_raulph.py
backend/: .env  .env.example  Dockerfile  Dockerfile.beat  Dockerfile.worker  Makefile  alembic.ini  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  seed_superadmin.py
backend/alembic/: env.py
backend/alembic/versions/: 24f6cbe8b8a9_salary_payroll_models.py  637d8a52aaa7_add_staff_student_parent_and_document_.py  72465181695e_initial_schema_auth.py  9429faef091d_add_academic_year_and_term.py  b46f59154721_academic_structure.py  c87e520f08c7_add_communication_models.py  cb8214154b1f_add_notifications.py  e0ee1d919e49_add_attendance_and_timetable_models.py  e79c380aaad5_add_examination_models.py  e9b42a419f5f_add_fee_management_models.py  f5c1f6572de6_add_leave_management.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  deps.py  enums.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  academic_year.py  attendance.py  audit.py  class_.py  department.py  document.py  event.py  examination.py  fee.py  homework.py  leave.py  message.py  notice.py  notification.py  parent.py  payment.py  payroll.py  salary.py  school.py  section.py  staff.py  student.py  subject.py  timetable.py  user.py
backend/tests/: conftest.py  test_multi_tenancy.py
(+183 files in other folders)
